<resources>
    <string name="app_name">PKyomuhendo</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up1">Sign Up</string>
    <string name="enter_your_password">Enter your password</string>


    <string name="username">Username</string>
    <string name="re_enter_password">Re_Enter Password</string>
    <string name="email2">Email</string>
    <string name="password5">Password</string>

    <string name="Edittxt1">Username</string>
    <string name="Edittxt2">Email</string>
    <string name="Edittxt3">Password</string>
    <string name="Edittxt4">Re Enter Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="re_enter_your_password">Re Enter your password</string>
    <string name="enter_your_email_address1">Enter Your Email Address</string>
</resources>